--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--
-      If you are serving your web app in a path other than the root, change the
-      href value below to reflect the base path you are serving from.
-
-      The path provided below has to start and end with a slash "/" in order for
-      it to work correctly.
-
-      For more details:
-      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-      This is a placeholder for base href that will be replaced by the value of
-      the `--base-href` argument provided to `flutter build`.
-    -->
+    <!-- Will be replaced by `--base-href` when building -->
     <base href="$FLUTTER_BASE_HREF">
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description" content="Self-recorded, infinitely loopable Ermine soundscapes.">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    >
 
-    <!-- iOS meta tags & icons -->
+    <!-- PWA / mobile web app settings -->
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Soundscapes">
-    <link rel="apple-touch-icon" href="assets/erminelogo.png">
+    <meta name="apple-mobile-web-app-title" content="Soundscapes | Ermine.at">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
+    <!-- Icons -->
+    <!-- PWA icon (also used by iOS when installed) -->
+    <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
 
-    <title>Soundscapes</title>
+    <!-- Browser favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96">
+
+    <title>Soundscapes | Ermine.at</title>
 
     <!-- PWA manifest and theme color -->
     <link rel="manifest" href="manifest.json">
